sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: type mismatch;
 found   : Unit
 required: Int
def distance(base:Int, position:Int):Int={
                                         ^