sort.baseball.NaiveBaseball.scala.code
override def run() {
  val nbBases = getNombreBases()
}

def distance(base:Int, position:Int):Int={
  
}